--- a/latihan1/about.html
+++ b/latihan1/about.html
@@ -79,29 +79,15 @@
     </center>
 
     <div class="about-section">
-        <h2>About me</h2>
+        <h2>ATentang Saya</h2>
         <p>Akhmad Orenzee Al fath Sitorus lahir 7 Agustus 2009 adalah seorang pelajar yang bersekolah di smk tritech informatika medan.</p>
         <p>Lahir di medan dan di besarkan di medan oleh keluarga yang bekecukupan.  </p>
 
-        <h2></h2>
-        <p>Quisque sed facilisis lectus. Ut vel neque nec justo ultrices feugiat. Curabitur auctor, tortor quis tincidunt laoreet, ligula justo scelerisque lectus, et vulputate nunc libero et dui.</p>
+        <h2>Tujuan Saya</h2>
+        <p>Tujuan saya, Saya ingin menjadi cyber scurity</p>
     </div>
 
-    <div class="team-section">
-        <div class="team-member">
-            <img src="team-member1.jpg" alt="Team Member 1">
-            <h3>John Doe</h3>
-            <p>Co-founder</p>
-        </div>
-
-        <div class="team-member">
-            <img src="team-member2.jpg" alt="Team Member 2">
-            <h3>Jane Smith</h3>
-            <p>Designer</p>
-        </div>
-
-        <!-- Add more team members as needed -->
-    </div>
+    
 
 </body>
 </html>
