--- a/latihan1/hobi.html
+++ b/latihan1/hobi.html
@@ -74,15 +74,15 @@
             <img src="hobby1.jpg" alt="Hobby 1">
             <div class="hobby-details">
                 <h2>sepak bola</h2>
-                <p></p>
+                <p>karena saya suka bermain bola</p>
             </div>
         </div>
 
         <div class="hobby">
             <img src="hobby2.jpg" alt="Hobby 2">
             <div class="hobby-details">
-                <h2>Photography</h2>
-                <p>Quisque sed facilisis lectus. Ut vel neque nec justo ultrices feugiat. Curabitur auctor, tortor quis tincidunt laoreet, ligula justo scelerisque lectus.</p>
+                <h2>futsal</h2>
+                <p>karena saya suka bermain futsal</p>
             </div>
         </div>
 
